--- a/app/src/main/res/layout/light.xml
+++ b/app/src/main/res/layout/light.xml
@@ -25,7 +25,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/seekBar"
-            android:layout_weight="1" />
+            android:layout_weight="1"
+            android:max="200"
+            android:progress="100"
+            android:indeterminate="false" />
 
     </LinearLayout>
     <LinearLayout
